# VaultShell

./: .gitignore  CMakeLists.txt  README.md  Shell.cpp  Shell.h  main.cpp  shell.h
crypto/: Crypto.cpp  Crypto.h  crypto.h
include/crypto/: Crypto.h
include/models/: VaultCrypto.h  VaultEntry.h
include/utils/: Base64.h  colours.h  input.h
include/vault/: Vault.h
models/: VaultEntry.cpp  VaultEntry.h  Vault_Entry.h  kek_info.h  vault_entry.h
src/crypto/: Crypto.cpp
src/models/: KEKInfo.h  VaultCrypto.cpp  VaultEntry.cpp  VaultEntry.h
src/utils/: Base64.cpp  input.cpp
src/vault/: Vault.cpp  Vault.h
utils/: Base64.cpp  Base64.h
vault/: Vault.cpp  Vault.h  vault.h
